# hs-playground

./: Makefile  README.md  hie.yaml  hs-playground.cabal  stack.yaml
add-presentation/: add.md
aeson-demo/: AesonQQ.hs  Main.hs  README.md
brick-demos/brick-intro/: README.md  brick-intro.cabal  stack.yaml
brick-demos/brick-intro/src/: Counter.hs  HelloWorld.hs  Main.hs
brick-demos/data-explorer/: README.md  data-explorer.cabal  stack.yaml
brick-demos/data-explorer/src/: Main.hs
contravariant-demo/: Main.hs
generics-demo/: Main.hs  Presentation.md
haskell-ide/: haskell-ide.md  script.hs
haskell-ide/demo-stack-project/: ChangeLog.md  LICENSE  README.md  demo-stack-project.cabal  hie.yaml
haskell-ide/demo-stack-project/src/: Lib.hs
how-long-is-your-list/: README.md  how-long-is-your-list.cabal
how-long-is-your-list/src/: Main.hs
hspec-demo/: ChangeLog.md  LICENSE  README.md  hspec-demo.cabal  hspec-presentation.md  stack.yaml
hspec-demo/src/: Lib.hs
hspec-demo/test/: BasicSpec.hs  HooksSpec.hs  ItSpec.hs  Spec.hs
monad-transformers-demo/: Main.hs
reanimate-demo/: LICENSE  README.md  hie.yaml  reanimate-demo.cabal
reanimate-demo/src/: Main.hs
record-ergonomics/: README.md  record-ergonomics.cabal  stack.yaml
record-ergonomics/src/: HKD.hs  Main.hs  NamedParameters.hs  SeparateRequired.hs  VanillaRecords.hs
servant-demo/: Main.hs
template-haskell-intro/: CHANGELOG.md  LICENSE  README.md  presentation.odp  template-haskell-intro.cabal
template-haskell-intro/src/: AesonDemo.hs  Declarations.hs  Expressions.hs  Main.hs  QMonad.hs  QuasiQuoters.hs  TupleProjections.hs
type-classes/: CHANGELOG.md  type-classes.cabal
type-classes/app/: Main.hs
type-classes/src/: Example1.hs  Example2.hs  Example3.hs  Example4.hs  Example5.hs
type-families/: README.md  TypeFamilies.md  stack.yaml  type-families.cabal
type-families/src/: ElmStreetDemo.hs  Examples.hs  Main.hs  ServantDemo.hs  TypeClasses.hs
validation-selective-demo/: README.md  validation-selective-demo.cabal
validation-selective-demo/app/: EitherDemo.hs  Main.hs  Person.hs  ValidationDemo.hs
