cabal-version:      3.0
name:               hs-playground
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2020 Author name here
maintainer:         example@example.com
author:             Author name here
homepage:           https://github.com/jhrcek/hs-playground#readme
synopsis:           Collection of random Haskell examples
description:        Collection of random Haskell examples.
category:           Web
build-type:         Simple
extra-source-files: README.md

source-repository head
    type:     git
    location: git@github.com/jhrcek/hs-playground.git


executable generics-demo
    main-is:          Main.hs
    -- other-modules:    ...
    hs-source-dirs:   generics-demo
    default-language: Haskell2010
--    ghc-options:      -Wall
    build-depends:    base >=4.7 && <5

executable servant-demo
    main-is:          Main.hs
    hs-source-dirs:   servant-demo
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base >=4.7 && <5,
        servant,
        servant-server,
        warp

executable monad-transformers-demo
    main-is:          Main.hs
    hs-source-dirs:   monad-transformers-demo
    default-language: Haskell2010
--    ghc-options:      -Wall
    build-depends:    base >=4.7 && <5