cabal-version:      2.4
name:               hs-playground
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2020 Jan Hrček
maintainer:         example@example.com
author:             Jan Hrček
homepage:           https://github.com/jhrcek/hs-playground#readme
synopsis:           Collection of random Haskell examples
description:        Collection of random Haskell examples.
category:           Web
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: git@github.com/jhrcek/hs-playground.git

executable generics-demo
  main-is:          Main.hs
  hs-source-dirs:   generics-demo
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:    base >=4.7 && <5

executable servant-demo
  main-is:          Main.hs
  hs-source-dirs:   servant-demo
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    , base            >=4.7 && <5
    , servant
    , servant-server
    , warp

executable monad-transformers-demo
  main-is:          Main.hs
  hs-source-dirs:   monad-transformers-demo
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:    base >=4.7 && <5

executable contravariant-demo
  main-is:          Main.hs
  hs-source-dirs:   contravariant-demo
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:    base >=4.7 && <5

executable aeson-demo
  main-is:          Main.hs
  other-modules:
    AesonQQ

  hs-source-dirs:   aeson-demo
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:
    , aeson
    , aeson-qq
    , base              >=4.7 && <5
    , template-haskell
