cabal-version:      2.4
name:               hspec-demo
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/jhrcek/hs-playground/hspec-demo#readme>

homepage:           https://github.com/jhrcek/hs-playground/hspec-demo#readme
bug-reports:        https://github.com/jhrcek/hs-playground/hspec-demo/issues
author:             Jan Hrček
maintainer:         example@example.com
copyright:          2022 Jan Hrček
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/jhrcek/hs-playground/hspec-demo

library
  exposed-modules:  Lib
  hs-source-dirs:   src
  build-depends:    base >=4.7 && <5
  default-language: Haskell2010

executable hspec-demo-exe
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base        >=4.7 && <5
    , hspec-demo

  default-language: Haskell2010

test-suite hspec-demo-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    BasicSpec
    HooksSpec
    ItSpec

  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base        >=4.7   && <5
    , hspec       ^>=2.9.4
    , hspec-demo
    , QuickCheck
    , stm

  default-language: Haskell2010
