cabal-version:      2.4
name:               reanimate-demo
version:            0.1.0.0
homepage:           https://github.com/githubuser/reanimate-demo#readme
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jan Hrček
maintainer:         example@example.com
copyright:          2021 Jan Hrček
category:           Web
build-type:         Simple
extra-source-files: README.md

executable reanimate-demo
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
      base           >=4.7 && <5
    , reanimate
    , reanimate-svg
