cabal-version:      2.4
name:               type-classes
version:            0.1.0.0
author:             Jan Hrček
maintainer:         honza.hrk@gmail.com
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Example1
    Example2
    Example3
    Example4
    Example5

  build-depends:
    , base
    , mtl

  hs-source-dirs:   src
  ghc-options:      -Wall -O0
  default-language: Haskell2010

executable demo
  main-is:          Main.hs
  hs-source-dirs:   app

  -- disable optimizations to see "user friendly core" output
  ghc-options:      -O0
  default-language: Haskell2010
  build-depends:
    , base
    , type-classes

test-suite type-classes-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          MyLibTest.hs
  build-depends:    base
