name:               type-families
version:            0.1.0.0
homepage:           https://github.com/jhrcek/hs-playground
license:            BSD3
license-file:       LICENSE
author:             Author name here
maintainer:         example@example.com
copyright:          2022 Author name here
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md

library
  hs-source-dirs:   src
  exposed-modules:  ServantDemo
                  , ElmStreetDemo
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
      base            >=4.7 && <5
    , elm-street
    , servant
    , servant-client
    , servant-server
