name:               brick-intro
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/githubuser/brick-intro#readme
license:            BSD3
license-file:       LICENSE
author:             Author name here
maintainer:         example@example.com
copyright:          2022 Author name here
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files:
  README.md

executable brick-intro
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules: HelloWorld, Counter
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost
  build-depends:
      base           >=4.7 && <5
    , brick
    , microlens
    , microlens-mtl
    , microlens-th
    , text
    , vty

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wcompat -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
