name:               data-explorer
version:            0.1.0.0
homepage:           https://github.com/jhrcek/hs-playground/tree/main/brick-demos
license:            BSD3
license-file:       LICENSE
author:             Author name here
maintainer:         example@example.com
copyright:          2022 Author name here
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files:
  README.md

executable data-explorer
  hs-source-dirs:   src
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:
      base           >=4.7 && <5
    , brick
    , microlens
    , microlens-mtl
    , microlens-th
    , sqlite-simple
    , text
    , vector
    , vty

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wcompat -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
