cabal-version:      2.4
name:               demo-stack-project
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2020 Jan Hrček
maintainer:         example@example.com
author:             Jan Hrček
homepage:           https://github.com/jhrcek/hs-playground#readme
bug-reports:        https://github.com/jhrcek/hs-playground/issues
description:
  Please see the README on GitHub at <https://github.com/jhrcek/hs-playground#readme>

build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/jhrcek/hs-playground

library
  exposed-modules:  Lib
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    , base         >=4.7 && <5
    , optics-core

executable demo-stack-project-exe
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base                >=4.7 && <5
    , demo-stack-project

test-suite demo-stack-project-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base                >=4.7 && <5
    , demo-stack-project
